# kartik-rx

./: .env  .eslintrc.js  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
page_yamls/: navigation.yaml  routes.yaml
page_yamls/investigations/: cancelledTests.yaml  processTests.yaml
page_yamls/notifications/: addPatient.yaml  dischargedPatients.yaml  home.yaml
public/: index.html  manifest.json
react_gen_code/: main.py  pyproject.toml
react_gen_code/base_view/: BaseComponent.js  BaseReducer.js  common.macros  navigationConfig.js  routes.js
react_gen_code/base_view/components/: BaseForm.js  BaseTableView.js
react_gen_code/base_view/components/Dialogs/: ChildrenDialog.js  ConfirmDialog.js
react_gen_code/base_view/components/Form/: Array.js  Base.js
react_gen_code/src/: config_validators.py  default_munch.py  mapped_import_paths.py  yaml_to_js.py
src/: App.js  globalContexts.js  routes.js  serviceWorker.js
src/actions/: helpers.js  index.js  patientActions.js  sessionActions.js
src/assets/scss/: index.scss
src/atoms/FormikFields/: ApiAutocomplete.js  ListField.js  index.js
src/compiled/: navigationConfig.js  routes.js
src/components/: index.js
src/hooks/: useAsyncActions.js
src/icons/: facebook.js  google.js
src/mock/: accountMock.js  billingMock.js  calendarMock.js  customerMock.js  dashboardMock.js  index.js  mailMock.js  patientMock.js  projectMock.js  userMock.js
src/reducers/: index.js  patientReducer.js  sessionReducer.js
src/utils/: gradients.js  patient.js  time.js
(+395 files in other folders)
